Update TD3 Vision Transformer.ipynb

--- a/TD3 Vision Transformer.ipynb
+++ b/TD3 Vision Transformer.ipynb
@@ -13,7 +13,7 @@
         "3. Add your code and answer the questions\n",
         "4. Commit and push regularly\n",
         "\n",
-        "The last commit is due on Sunday, 14th January 2024 Later commits will not be taken into account."
+        "The last commit is due on Sunday, 14th January 2024. Later commits will not be taken into account."
       ]
     },
     {
