Update TD3 Vision Transformer.ipynb

--- a/TD3 Vision Transformer.ipynb
+++ b/TD3 Vision Transformer.ipynb
@@ -75,8 +75,7 @@
         "from torch.optim import Adam\n",
         "from torch.utils.data import DataLoader\n",
         "from torchvision.datasets.mnist import MNIST\n",
-        "from torchvision.transforms import ToTensor\n",
-        "from tqdm import tqdm, trange"
+        "from torchvision.transforms import ToTensor"
       ]
     },
     {
@@ -96,10 +95,10 @@
         "transform = ToTensor()\n",
         "\n",
         "train_set = MNIST(\n",
-        "    root=\"./../datasets\", train=True, download=True, transform=transform\n",
+        "    root=\"datasets\", train=True, download=True, transform=transform\n",
         ")\n",
         "test_set = MNIST(\n",
-        "    root=\"./../datasets\", train=False, download=True, transform=transform\n",
+        "    root=\"datasets\", train=False, download=True, transform=transform\n",
         ")\n",
         "\n",
         "train_loader = DataLoader(train_set, shuffle=True, batch_size=128)\n",
@@ -218,7 +217,7 @@
       "source": [
         "class MSA(nn.Module):\n",
         "    def __init__(self, d, n_heads=2):\n",
-        "        self.super().__init__()\n",
+        "        super().__init__()\n",
         "        self.d = d\n",
         "        self.n_heads = n_heads\n",
         "\n",
@@ -252,9 +251,12 @@
         "                seq = sequence[:, head * self.d_head : (head + 1) * self.d_head]\n",
         "                q, k, v = q_mapping(seq), k_mapping(seq), v_mapping(seq)\n",
         "\n",
-        "                attention = self.softmax(q @ k.T / (self.d_head**0.5))\n",
+        "                #\n",
+        "                # TO DO: implement attention computation\n",
+        "                #\n",
+        "                attention = \n",
         "\n",
-        "                seq_result.append(attention @ v)\n",
+        "                seq_result.append(attention)\n",
         "                \n",
         "            result.append(torch.hstack(seq_result))\n",
         "        return torch.cat([torch.unsqueeze(r, dim=0) for r in result])"
@@ -298,7 +300,7 @@
       "source": [
         "class ViTBlock(nn.Module):\n",
         "    def __init__(self, hidden_d, n_heads, mlp_ratio=4):\n",
-        "        self.super().__init__()\n",
+        "        super().__init__()\n",
         "        self.hidden_d = hidden_d\n",
         "        self.n_heads = n_heads\n",
         "\n",
@@ -315,8 +317,8 @@
         "        #\n",
         "        # TO DO: implement the forward pass\n",
         "        #\n",
-        "\n",
         "        out = \n",
+        "        \n",
         "        return out"
       ]
     },
@@ -348,7 +350,7 @@
         "class ViT(nn.Module):\n",
         "    def __init__(self, chw, n_patches=7, n_blocks=2, hidden_d=8, n_heads=2, out_d=10):\n",
         "        # Super constructor\n",
-        "        self.super().__init__()\n",
+        "        super().__init__()\n",
         "\n",
         "        # Attributes\n",
         "        self.chw = chw  # ( C , H , W )\n",
@@ -473,11 +475,9 @@
       "source": [
         "optimizer = Adam(model.parameters(), lr=LR)\n",
         "criterion = CrossEntropyLoss()\n",
-        "for epoch in trange(N_EPOCHS, desc=\"Training\"):\n",
+        "for epoch in range(N_EPOCHS):\n",
         "    train_loss = 0.0\n",
-        "    for batch in tqdm(\n",
-        "        train_loader, desc=f\"Epoch {epoch + 1} in training\", leave=False\n",
-        "    ):\n",
+        "    for batch in train_loader:\n",
         "        x, y = batch\n",
         "        x, y = x.to(device), y.to(device)\n",
         "        y_hat = model(x)\n",
@@ -513,7 +513,7 @@
         "with torch.no_grad():\n",
         "    correct, total = 0, 0\n",
         "    test_loss = 0.0\n",
-        "    for batch in tqdm(test_loader, desc=\"Testing\"):\n",
+        "    for batch in test_loader:\n",
         "        x, y = batch\n",
         "        x, y = x.to(device), y.to(device)\n",
         "\n",
