--- a/TD3 Vision Transformer.ipynb
+++ b/TD3 Vision Transformer.ipynb
@@ -17,11 +17,11 @@
         "\n",
         "As the computation is heavy, particularly during training, we encourage you to use a GPU. If your laptob is not equiped, you may use one of these remote jupyter servers, where you can select the execution on GPU :\n",
         "\n",
-        "1) [jupyter.mi90.ec-lyon.fr](jupyter.mi90.ec-lyon.fr)\n",
+        "1) [jupyter.mi90.ec-lyon.fr](https://jupyter.mi90.ec-lyon.fr/)\n",
         "\n",
         "This server is accessible within the campus network. If outside, you need to use a VPN. Before executing the notebook, select the kernel \"Python PyTorch\" to run it on GPU and have access to PyTorch module.\n",
         "\n",
-        "2) [Google Colaboratory](colab.research.google.com)\n",
+        "2) [Google Colaboratory](https://colab.research.google.com/)\n",
         "\n",
         "Before executing the notebook, select the execution on GPU : \"Exécution\" Menu -> \"Modifier le type d'exécution\" and select \"T4 GPU\". "
       ]
