Update TD3 Vision Transformer.ipynb

--- a/TD3 Vision Transformer.ipynb
+++ b/TD3 Vision Transformer.ipynb
@@ -15,13 +15,7 @@
         "\n",
         "**The last commit is due on Wednesday, January 8, 2026**. Later commits will not be taken into account.\n",
         "\n",
-        "As the computation is heavy, particularly during training, we encourage you to use a GPU. If your laptob is not equiped, you may use one of these remote jupyter servers, where you can select the execution on GPU :\n",
-        "\n",
-        "1) [jupyter.mi90.ec-lyon.fr](https://jupyter.mi90.ec-lyon.fr/)\n",
-        "\n",
-        "This server is accessible within the campus network. If outside, you need to use a VPN. Before executing the notebook, select the kernel \"Python PyTorch\" to run it on GPU and have access to PyTorch module.\n",
-        "\n",
-        "2) [Google Colaboratory](https://colab.research.google.com/)\n",
+        "As the computation is heavy, particularly during training, we encourage you to use a GPU. If your laptob is not equiped, you may use a [Google Colaboratory](https://colab.research.google.com/) jupyter server.\n",
         "\n",
         "Before executing the notebook, select the execution on GPU : \"Exécution\" Menu -> \"Modifier le type d'exécution\" and select \"T4 GPU\". "
       ]
